--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <body>
   <div class="appContainer">
     <header class="mainHeader">
-      <img  class="gashi1" src="https://mbtskoudsalg.com/images/gachigasm-transparent-3.png" alt="gashi1">
-      <img  class="gashi2" src="https://mbtskoudsalg.com/images/gachigasm-transparent-3.png" alt="gashi2">
-      <h1 id="snakegasmTitle" class="noselect">Snake<span class='gasm'>GASM</span></h1>
+      <img  class="gashi1" src="assets/images/gashi1.png" alt="gashi1">
+      <img  class="gashi2" src="assets/images/gashi1.png" alt="gashi2">
+      <h1 id="snakegasmTitle" class="noselect">Snake<span class='gasm'>GAS</span><span class='gasm m'>M</span></h1>
     </header> 
       <div id="snake-container"> <!-- 400px/400px -->
         <!-- keep this empty the js will render this -->
