--- a/index.html
+++ b/index.html
@@ -17,17 +17,21 @@
   <script src="sketch.js"></script>
 </head>
 <body>
+    <audio id="e-sound" style="display:none;" controls="controls" preload="auto">
+				<source src="https://a.clyp.it/q2oaawbe.mp3"></source>
+		</audio>
   <div class="appContainer">
     <header class="mainHeader">
       <img  class="gashi1" src="assets/images/gashi1.png" alt="gashi1">
       <img  class="gashi2" src="assets/images/gashi1.png" alt="gashi2">
-      <h1 id="snakegasmTitle" class="noselect">Snake<span class='gasm'>GAS</span><span class='gasm m'>M</span></h1>
+      <h1 id="snakegasmTitle" class="noselect shadow-pop-tr">Snak<span class="e">e</span><span class='gasm'>GAS</span><span class='gasm m'>M</span></h1>
     </header> 
       <div id="snake-container"> <!-- 400px/400px -->
         <!-- keep this empty the js will render this -->
       </div>
-      <div class="sidebar">
-      </div>
+      <footer>
+        about
+      </footer>
   </div>
 </body>
 </html>
