--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
       <div id="snake-container"> <!-- 400px/400px -->
         <!-- keep this empty the js will render this -->
       </div>
-      <footer>
-        about
+      <footer class="footer">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="https://github.com/AlaaZorkane/snakeGASM/">Github</a></li>
+        </ul>
       </footer>
   </div>
 </body>
