--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="shortcut icon" type="image/png" href="/assets/images/gashi1.png"/>
   <title>SnakeGASM</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="../style.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
   <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css" />
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet"> 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-  <script src="../main.js"></script>
+  <script src="main.js"></script>
   <!-- P5 -->
-  <script src="../jsadd/p5.min.js"></script>
-  <script src="../jsadd/p5.sound.min.js"></script>
-  <script src="../sketch.js"></script>
+  <script src="jsadd/p5.min.js"></script>
+  <script src="jsadd/p5.sound.min.js"></script>
+  <script src="sketch.js"></script>
 </head>
 <body>
     <audio id="e-sound" style="display:none;" controls="controls" preload="auto">
@@ -22,8 +23,8 @@
 		</audio>
   <div class="appContainer">
     <header class="mainHeader">
-      <img  class="gashi1" src="../assets/images/gashi1.png" alt="gashi1">
-      <img  class="gashi2" src="../assets/images/gashi1.png" alt="gashi2">
+      <img  class="gashi1" src="assets/images/gashi1.png" alt="gashi1">
+      <img  class="gashi2" src="assets/images/gashi1.png" alt="gashi2">
       <h1 id="snakegasmTitle" class="noselect shadow-pop-tr">Snak<span class="e">e</span><span class='gasm'>GAS</span><span class='gasm m'>M</span></h1>
     </header> 
       <div id="snake-container"> <!-- 400px/400px -->
